--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>NCES2020</title>
-    <meta property="og:title" content="NCES2020"/>
+    <title>TIMES-Azərbaycan</title>
+    <meta property="og:title" content="TIMES-Azərbaycan"/>
     <meta property="og:type" content="movie"/>
     <meta property="og:url" content="https://nces2020.tokni.com"/>
     <meta property="og:image" content="https://nces2020.tokni.com/images/energiaftalen.png"/>
-    <meta property="og:site_name" content="NCES2020"/>
+    <meta property="og:site_name" content="TIMES-Azərbaycan"/>
     <meta property="og:description"
-          content="With this tool you can explore different scenarios developed in NCES2020 Project.
+          content="With this tool you can explore different scenarios developed in TIMES-Azərbaycan Project.
           Select a scenario and see the results in the charts."/>
     <script async defer data-domain="nces2020.tokni.com" src="https://plausible.io/js/plausible.js"></script>
   </head>
